editprofile and form align to center fixed

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@
 -moz-box-shadow: -5px 9px 79px -21px rgba(0,0,0,0.75);
 border-radius: 20px;
 transition: opacity 0.5s ease-in-out;
+margin: 0;
   }
  
   .hidden {
